--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE:mongodb+srv://equilibrio_speakers:joinus123@speakers.d1nqa.mongodb.net/speakersDB?retryWrites=true&w=majority
+DATABASE:mongodb+srv://speakers:joinus123@cluster0.2jtqz.mongodb.net/techfest22?retryWrites=true&w=majority
 SECRETKEY:THISISEQUILIBRIOSPEAKERSPAGE
