--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE:mongodb+srv://speakers:joinus123@cluster0.2jtqz.mongodb.net/techfest22?retryWrites=true&w=majority
-SECRETKEY:THISISEQUILIBRIOSPEAKERSPAGE
+DATABASE=mongodb+srv://speakers:joinus123@cluster0.2jtqz.mongodb.net/techfest22?retryWrites=true&w=majority
+SECRETKEY=THISISEQUILIBRIOSPEAKERSPAGE
